# GamePerson

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: screen.cpp  screen.h  util.cpp  util.h
src/core/cpu/: cpu.cpp  cpu.h
src/qt/: main.cpp  main.h  render.h  window.cpp
src/sdl/: main.cpp
